--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Subscription Plan</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Test Test Test</h1>
     <script src="script.js"></script>
   </body>
 </html>
