--- a/index.html
+++ b/index.html
@@ -7,7 +7,56 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Test Test Test</h1>
+    <main>
+      <section class="main__wrapper">
+        <h1 class="visually-hidden">Subscription Plan</h1>
+        <div class="icon__wrapper">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-photo"
+            width="30"
+            height="30"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="#1b245a"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M15 8h.01" />
+            <path
+              d="M3 6a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v12a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3v-12z"
+            />
+            <path d="M3 16l5 -5c.928 -.893 2.072 -.893 3 0l5 5" />
+            <path d="M14 14l1 -1c.928 -.893 2.072 -.893 3 0l3 3" />
+          </svg>
+          <h2 class="plan__title">Basic</h2>
+        </div>
+        <div class="price__wrapper">
+          <p class="plan__price">
+            <span>$25</span><br />
+            Dollar/Month
+          </p>
+        </div>
+        <div class="download__wrapper">
+          <div class="download selected">
+            <p class="download__amount">10</p>
+          </div>
+          <div class="download">
+            <p class="download__amount">25</p>
+          </div>
+          <div class="download">
+            <p class="download__amount">50</p>
+          </div>
+          <div class="download">
+            <p class="download__amount">100</p>
+          </div>
+        </div>
+        <h3 class="plan__subtitle">Downloads per month</h3>
+        <button type="button">Subscibe</button>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
