--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
         </div>
         <h3 class="plan__subtitle">Downloads per month</h3>
-        <button type="button">Subscibe</button>
+        <button class="plan--btn" type="button">Subscibe</button>
       </section>
     </main>
     <script src="script.js"></script>
