--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <main>
-      <section class="main__wrapper">
+      <section class="section__wrapper">
         <h1 class="visually-hidden">Subscription Plan</h1>
         <div class="icon__wrapper">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="icon icon-tabler icon-tabler-photo"
-            width="30"
-            height="30"
+            width="50"
+            height="50"
             viewBox="0 0 24 24"
             stroke-width="2"
             stroke="#1b245a"
@@ -36,7 +36,7 @@
         <div class="price__wrapper">
           <p class="plan__price">
             <span>$25</span><br />
-            Dollar/Month
+            per/Month
           </p>
         </div>
         <div class="download__wrapper">
@@ -54,8 +54,10 @@
           </div>
         </div>
         <h3 class="plan__subtitle">Downloads per month</h3>
+
         <button class="plan--btn" type="button">Subscibe</button>
       </section>
+      <div class="subscribed"></div>
     </main>
     <script src="script.js"></script>
   </body>
