--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="price__wrapper">
           <p class="plan__price">
             <span>$25</span><br />
-            per/Month
+            Dollar/Month
           </p>
         </div>
         <div class="download__wrapper">
