spell check lol

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <h3 class="plan__subtitle">Downloads per month</h3>
 
-        <button class="plan--btn" type="button">Subscibe</button>
+        <button class="plan--btn" type="button">Subscribe</button>
       </section>
       <div class="subscribed"></div>
     </main>
